resources/assets/css/components/mediaitem.scss
/* ==========================================================================
   #MEDIAITEM
   ========================================================================== */

/*
 * Thumbnail dimensions:
 * Video:       96x54       192x108
 * Serie:       128x72      256x144
 * Sprecher:    80x80       160x160
 */
$width-video:    (96px 54px);
$width-audio:    (54px 54px);
$width-serie:    (128px 72px);
$width-sprecher: (80px 80px);
$width-post:     (160px 90px);

/**
 * 1. Overwriting o-media with flexbox for vertical centering
 */
.c-mediaitem {
    display: flex; /* 1 */
    position: relative;
    transform: translate(0, 0);
    transition: $global-transition;
    border-radius: $global-radius;
    padding: $unit-small;
    align-items: center; /* 1 */

    &:hover {
        transform: translate(-1px, -2px);
        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
        background-color: var(--background, rgba($c-black, 0.03));
    }

    &--post {
        align-items: flex-start;
        padding-top: $unit;
        padding-bottom: $unit;
    }

    &--simple {
        border: 1px solid var(--border, $c-textmuted);
        padding-top: $unit-tiny;
        padding-bottom: $unit-tiny;
        min-width: 15em;

        &:hover {
            transform: none;
            box-shadow: none;
        }
    }

    &--standalone {
        margin-left: -$unit-small;
    }
}

    .c-mediaitem__link {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        z-index: -1;
        width: 100%;
        height: 100%;

        .c-mediaitem--post & {
            z-index: 11;
        }
    }

    .c-mediaitem__img {
        position: relative;
        margin-right: $unit;
        width: nth($width-video, 1);
        height: nth($width-video, 2);
        flex-basis: nth($width-video, 1);
        flex-shrink: 0;
        border-radius: $global-radius;
        background-color: $c-gray-2;
        background-size: cover;
        overflow: hidden;

        .c-mediaitem--video & {
            background-image: url("../img/dummy-108p.jpg");
        }

        .c-mediaitem--audio & {
            width: nth($width-audio, 1);
            flex-basis: nth($width-audio, 1);
            // background-image: url("../img/dummy-108p.jpg");
        }

        .c-mediaitem--series & {
            width: nth($width-serie, 1);
            height: nth($width-serie, 2);
            flex-basis: nth($width-serie, 1);
            background-image: url("../img/dummy-144p.jpg");
        }

        .c-mediaitem--speakers & {
            width: nth($width-sprecher, 1);
            height: nth($width-sprecher, 2);
            flex-basis: nth($width-sprecher, 1);
            background-image: url("../img/dummy-square160.jpg");
        }

        .c-mediaitem--topics & {
            width: auto;
            height: $unit-large;
            flex-basis: auto;
            background-color: transparent;
        }

        .c-mediaitem--post & {
            width: nth($width-post, 1);
            height: nth($width-post, 2);
            flex-basis: nth($width-post, 1);
            background-image: url("../img/dummy-180p.jpg");
        }

        .c-mediaitem--simple & {
            margin-right: $unit-small;
        }


        img {
            border-radius: $global-radius;
            width: 100%; // strech smaller img
        }
    }

        .c-mediaitem__new {
            position: absolute;
            z-index: 99;
            top: -3px;
            left: -3px;
            width: 40px;
            height: 40px;
            background-size: 100%;
        }

        .c-mediaitem__imglink {
            display: block;
            transition: $global-transition opacity;
            color: currentcolor;

            &:after {
                content: "";
                position: absolute;
                z-index: 10;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                box-shadow: 0 0 8px rgba($c-black, 0.1) inset;
            }

            .c-mediaitem--topics & {
                line-height: 1;
                font-size: $unit-large;
                opacity: 0.15;
            }

            .c-mediaitem--topics:hover &,
            .c-mediaitem--topics:focus & {
                color: currentcolor;
                opacity: 0.6;
            }
        }

        .c-mediaitem__length {
            display: block;
            position: absolute;
            right: 0;
            bottom: 0;
            border-radius: $global-radius 0;
            background-color: rgba($c-black, 0.6);
            padding: 2px $unit-tiny 0;
            line-height: 1.3;
            color: $c-white;
            font-size: 70%;
            font-weight: 500;

            .c-mediaitem--series & {
                display: flex;
                top: 0;
                right: 70%;
                left: 0;
                border-radius: $global-radius 0 0 $global-radius;
                align-items: center;

                > div {
                    width: 100%;
                    text-align: center;
                    font-weight: 600;
                    font-size: 120%;
                }
            }

            .c-mediaitem--post & {
                width: 100%;
                text-align: center;
                border-radius: 0 0 $global-radius $global-radius;
            }

            .c-mediaitem--dummy & {
                color: transparent;
            }
        }

    .c-mediaitem__body {
        .c-mediaitem--dummy & {
            width: 100%;
        }
    }

        .c-mediaitem__title {
            @include inuit-font-size($font-size, 1.3);

            display: block;
            font-weight: 400;
            margin-bottom: 0;

            &,
            a {
                &,
                &:hover,
                &:focus, {
                    color: currentcolor;
                }
            }

            .c-mediaitem--post & {
                margin-bottom: $unit-small
            }
        }

        .c-mediaitem__meta {
            @include inuit-font-size($font-size-tiny, 1.5);

            color: $c-textmuted;
            font-weight: 300;
            margin-left: 0;
            margin-bottom: $unit-tiny;

            > li {
                display: inline;

                &:not(:last-child)::after {
                    content: "\a0\b7"; /* \b7 is a middot, \a0 is a space */
                }
            }

            a {
                color: currentcolor;

                &:focus,
                &:hover {
                    border-bottom: 1px dotted currentcolor;
                    color: currentcolor;
                }
            }
        }

        .c-mediaitem--dummy {
            .c-mediaitem__title,
            .c-mediaitem__meta {
                background-color: $c-border;
                border-radius: $global-radius;
                color: transparent;
                margin-top: 0.2em;

                &:after {
                    content: "Lorem Ipsum";
                }
            }

            .c-mediaitem__meta {
                background-color: $c-gray-1;
            }
        }

        .c-mediaitem__content {
            color: $c-textmuted;
        }

